<resources>
    <string name="app_name">Cat Pedigree</string>
    <string name="title_onboarding_one">Classification</string>
    <string name="title_onboarding_two">Pedigree</string>
    <string name="title_onboarding_three">Social Media</string>
    <string name="title_onboarding_four">Dating</string>
    <string name="desc_onboarding_one">Identify type of cat by taking a photo, \nthe application will analyze the type of cat</string>
    <string name="desc_onboarding_two">Classify cat breeds and analyze \nclassification report for cross-breeds analysis.</string>
    <string name="desc_onboarding_three">Connect and socialize with \nall cat owners in the world</string>
    <string name="desc_onboarding_four">Find the perfect match \nfor your beloved cat</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_skip">Skip</string>
    <string name="btn_start">Start</string>
    <string name="btn_scan">Scan Here</string>
    <string name="btn_login">Login</string>
    <string name="title_login">Let’s Sign In</string>
    <string name="desc_login">Welcome back you\'ve been missed</string>
    <string name="title_register">Sign Up</string>
    <string name="desc_register">Let\'s a new create account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_account">Dont have an account?</string>
    <string name="desc_content_img_login">this is the logo on the login section</string>
    <string name="register">Sign Up</string>
    <string name="register_full_name">Full Name</string>
    <string name="register_username">Username</string>
    <string name="register_phone_number">Phone Number</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_account">Already have an account?</string>
    <string name="register_error">"Signup failed, try again!"</string>
    <string name="register_confirm_password">Confirm Password</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="service">Service</string>
    <string name="search">Search</string>
    <string name="pedigree">Pedigree</string>
    <string name="profile">Profile</string>
    <string name="account">Account</string>
    <string name="language">Language</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="more">more</string>
    <string name="camera_classification">Camera Classification</string>
    <string name="greeting_name">Budi Setiawan</string>
    <string name="greeting_loc">Jakarta, Indonesia</string>
    <string name="post_profile_image">Post Image</string>
    <string name="post_profile_name">Post Profile Name</string>
    <string name="post_description">Post Description</string>
    <string name="name_required">"Enter Full Name"</string>
    <string name="username_required">Enter Username</string>
    <string name="phone_number_required">Enter Phone Number</string>
    <string name="email_required">Enter Email</string>
    <string name="description_required">Enter Description</string>
    <string name="select_a_picture">"Please select a picture"</string>
    <string name="email_pattern">Enter Valid Email</string>
    <string name="password_required">Enter Password</string>
    <string name="password_match">Passwords are not the same</string>
    <string name="password_required_length">Password minimum 8 characters</string>
    <string name="error_login">"Login failed, wrong email and password!"</string>
    <string name="retry_text">Try Again</string>
    <string name="error_load">"Failed to load data"</string>
    <string name="no_data">No data available</string>
    <string name="count_love">9.8K</string>
    <string name="count_comment">100</string>
    <string name="comment">Comment</string>
    <string name="add_comment">Add Comment</string>
    <string name="post">Post</string>
    <string name="camera">Camera</string>
    <string name="switch_camera">Switch</string>
    <string name="gallery">Gallery</string>
    <string name="failed_to_take_picture">Failed to take pictures!</string>
    <string name="failed_to_start_camera">Failed to start the camera</string>
    <string name="choose_image">Choose an image from</string>
    <string name="add_post">Add Post</string>
    <string name="no_location_selected">No location selected</string>
    <string name="delete_location">Delete location</string>
    <string name="change">Change</string>
    <string name="maps_save">Confirm</string>
    <string name="create_post">Confirm</string>
    <string name="maps_lat_lon_format" translatable="false">Lat: %1$.2f Lon: %2$.2f</string>
    <string name="avatar">Avatar</string>
    <string name="name">Name</string>
    <string name="count_follower">50.5K</string>
    <string name="follower">Follower</string>
    <string name="desc_profilee">Lorem Ipsum is simply dummy text of the printing</string>
    <string name="btn_edt_profile">Edit Profile</string>
    <string name="my_cats">My Cats</string>
    <string name="add_cat">Add Cat</string>
    <string name="desc_avatar_profile">this is the avatar on profile</string>
    <string name="desc_btn_fav_profile">This is the favorite button on the profile page</string>
    <string name="btn_edt_photo_profile">Edit Photo Profile</string>
    <string name="confirm">Confirm</string>
    <string name="bio">Bio</string>
    <string name="follow">Follow</string>
    <string name="message">Message</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_bio">Enter bio</string>
    <string name="cat_name">Cat Name</string>
    <string name="breed">Breed</string>
    <string-array name="item_breed">
        <item>Abyssinian</item>
        <item>Bengal</item>
        <item>Birman</item>
        <item>Bombay</item>
        <item>British Shorthair</item>
        <item>Calico</item>
        <item>Domestic Long Hair</item>
        <item>Egyptian Mau</item>
        <item>Himalayan</item>
        <item>Maine Coon</item>
        <item>Persian</item>
        <item>Ragdoll</item>
        <item>Russian Blue</item>
        <item>Scottish Fold</item>
        <item>Siamese</item>
        <item>Sphynx</item>
        <item>Tuxedo</item>
    </string-array>
    <string name="gender">Gender</string>
    <string-array name="item_gender">
        <item>Female</item>
        <item>Male</item>
    </string-array>
    <string-array name="item_color_female">
        <item>Black</item>
        <item>Grey</item>
        <item>Orange</item>
        <item>Silver</item>
        <item>Black Tortie</item>
        <item>Grey Tortie</item>
    </string-array>
    <string-array name="item_color_male">
        <item>Black</item>
        <item>Grey</item>
        <item>Orange</item>
        <item>Silver</item>
    </string-array>
    <string-array name="item_question_white">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string name="count_post">15</string>
    <string name="count_following">100</string>
    <string name="following">Following</string>
    <string name="btn_follow">Follow</string>
    <string name="username">Username</string>
    <string name="dating">Dating</string>
    <string name="btn_unfollow">Unfollow</string>
    <string name="no_post_data">Not Posts Yet</string>
</resources>