<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:iconTint="@color/white"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />
    <item
        android:id="@+id/message"
        android:icon="@drawable/ic_baseline_chat_24"
        android:title="@string/message"
        android:contentDescription="@string/add"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/profile"
        android:title="@string/profile" />
    <item android:id="@+id/account"
        android:title="@string/account" />
    <item android:id="@+id/language"
        android:title="@string/language" />
    <item android:id="@+id/about"
        android:title="@string/about" />
    <item android:id="@+id/logout"
        android:title="@string/logout" />
</menu>