<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home"/>
    <item
        android:id="@+id/menu_service"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_local_fire_department_24"
        android:title="@string/service"/>
    <item
        android:id="@+id/menu_pedigree"
        android:enabled="true"
        android:icon="@drawable/ic_pedigree"
        android:title="@string/pedigree"/>
    <item
        android:id="@+id/menu_dating"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_web_stories_24"
        android:title="@string/dating"/>
</menu>