<?xml version="1.0" encoding="utf-8"?>

<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipe_layout"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.profile.user.ProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/top_app"
            app:title="@string/profile" />

    </com.google.android.material.appbar.AppBarLayout>


    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_name"
        style="@style/title4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/name"
        android:textColor="@color/neutral_100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_avatar"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <TextView
        android:id="@+id/tv_bio"
        style="@style/body1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/bio"
        android:textColor="@color/neutral_80"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_avatar"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <ImageView
        android:id="@+id/iv_post_count"
        android:layout_width="115dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:alpha="0.6"
        android:contentDescription="@string/count_post"
        android:src="@drawable/rectangle_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_avatar" />

    <TextView
        android:id="@+id/tv_post_count"
        style="@style/heading1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/count_post"
        android:textAlignment="center"
        android:textColor="@color/neutral_100"
        app:layout_constraintEnd_toEndOf="@+id/iv_post_count"
        app:layout_constraintStart_toStartOf="@+id/iv_post_count"
        app:layout_constraintTop_toTopOf="@+id/iv_post_count" />

    <TextView
        android:id="@+id/tv_count_post"
        style="@style/body3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/iv_post_count"
        app:layout_constraintStart_toStartOf="@+id/iv_post_count"
        app:layout_constraintTop_toBottomOf="@+id/tv_post_count" />

    <ImageView
        android:id="@+id/iv_follower_count"
        android:layout_width="115dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:alpha="0.6"
        android:contentDescription="@string/count_follower"
        android:src="@drawable/rectangle_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_avatar" />

    <TextView
        android:id="@+id/tv_follower_count"
        style="@style/heading1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/count_follower"
        android:textAlignment="center"
        android:textColor="@color/neutral_100"
        app:layout_constraintEnd_toEndOf="@+id/iv_follower_count"
        app:layout_constraintStart_toStartOf="@+id/iv_follower_count"
        app:layout_constraintTop_toTopOf="@+id/iv_follower_count" />

    <TextView
        android:id="@+id/tv_follower"
        style="@style/body3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/follower"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/iv_follower_count"
        app:layout_constraintStart_toStartOf="@+id/iv_follower_count"
        app:layout_constraintTop_toBottomOf="@+id/tv_follower_count" />


    <ImageView
        android:id="@+id/iv_following_count"
        android:layout_width="115dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:alpha="0.6"
        android:contentDescription="@string/count_following"
        android:src="@drawable/rectangle_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_avatar" />

    <TextView
        android:id="@+id/tv_following_count"
        style="@style/heading1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/count_following"
        android:textAlignment="center"
        android:textColor="@color/neutral_100"
        app:layout_constraintEnd_toEndOf="@+id/iv_following_count"
        app:layout_constraintStart_toStartOf="@+id/iv_following_count"
        app:layout_constraintTop_toTopOf="@+id/iv_following_count" />

    <TextView
        android:id="@+id/tv_following"
        style="@style/body3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/following"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/iv_following_count"
        app:layout_constraintStart_toStartOf="@+id/iv_following_count"
        app:layout_constraintTop_toBottomOf="@+id/tv_following_count" />

    <ToggleButton
        android:id="@+id/btn_follow"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/follow_toggle"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="@string/btn_follow"
        android:textColor="@drawable/follow_toggle"
        android:textOff="@string/btn_follow"
        android:textOn="@string/btn_unfollow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_follower_count" />

    <TextView
        android:id="@+id/my_cats"
        style="@style/heading2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/my_cats"
        android:textColor="@color/neutral_100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_follow" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_cats"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_cats"
        tools:listitem="@layout/item_cats" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_post_profile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_cats"
        tools:listitem="@layout/item_post">

    </androidx.recyclerview.widget.RecyclerView>

    <ImageView
        android:id="@+id/iv_no_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/circle_image"
        android:contentDescription="@string/no_data"
        android:padding="8dp"
        android:src="@drawable/ic_baseline_camera_alt_24"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_cats" />

    <TextView
        android:id="@+id/tv_no_data"
        style="@style/heading2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/no_post_data"
        android:textAlignment="center"
        android:textColor="@color/neutral_100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_no_data"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>